--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -35,14 +35,20 @@ body {
   color: #000000;
   margin-bottom: 25px;
 }
+.about-cover {
+  display: block;
+  margin-left: auto;
+}
 .about_description {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   color: #595959;
-  width: 477px;
+  text-align: justify;
+  text-indent: 2em;
 }
+
 /* Projects Styles */
 .projects {
   margin-bottom: 50px;
@@ -87,6 +93,7 @@ body {
 }
 .work_position,
 .organisation {
+  display: block;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
