--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -35,9 +35,31 @@ body {
   color: #000000;
   margin-bottom: 25px;
 }
+
 .about-cover {
   display: block;
-  margin-left: auto;
+
+  min-width: 169px;
+
+  padding: 16px 32px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 4px;
+  border: none;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  background-color: rgba(30, 41, 57, 0.035);
+  color: #fb6d3a;
+  transition: background-color 250ms ease, color 250ms ease;
+}
+
+.about-cover:hover,
+.about-cover:focus {
+  color: #ffffff;
+  background-color: rgb(30, 41, 57);
 }
 .about_description {
   font-style: normal;
@@ -101,9 +123,7 @@ body {
   color: #000000;
   margin-bottom: 10px;
 }
-.work_position {
-  margin-right: 145px;
-}
+
 .organisation {
   color: #fb6d3a;
 }
@@ -160,23 +180,13 @@ body {
 /* Sidebar Styles */
 .sidebar {
   background-color: #1e2939;
-  padding-top: 40px;
+
   width: 370px;
 }
 .photo {
   width: 370px;
   margin-bottom: 50px;
 }
-
-/* .contacts {
-  margin-left: 40px;
-}
-.Tech_skills {
-  margin-left: 40px;
-}
-.Soft_Skills {
-  margin-left: 40px;
-} */
 
 .Contacts,
 .Tech_Skills,
@@ -191,6 +201,7 @@ body {
 .Tech_Skills {
   margin-bottom: 45px;
 }
+
 .Sidebar_title,
 .Languages_title,
 .Certificates_title {
@@ -201,22 +212,48 @@ body {
   line-height: 27px;
   margin-bottom: 10px;
 }
+
 .contact_type {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   color: #fb6d3a;
-  margin-right: 10px;
+
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
+
+.contact_type:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+svg {
+  fill: #ffffff;
+  transition: fill 250ms ease;
+}
+
+.contact_type:hover .contact_link,
+.contact_type:focus .contact_link {
+  color: #fb6d3a;
+}
+
+.contact_type:hover svg,
+.contact_type:focus svg {
+  fill: #fb6d3a;
+}
+
 .contact_link {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   color: #ffffff;
+  transition: color 250ms ease;
 }
-.Tech_Skills_list,
+
+.contact_link .Tech_Skills_list,
 .Sidebar_title_list,
 .Languages_title_list,
 .Certificates_title_list {
@@ -228,6 +265,7 @@ body {
   padding: 0;
   margin-left: 17px;
 }
+
 .Tech_Skills_item,
 .Sidebar_title_item,
 .Languages_title_item,
